# object_rect_image_saver

./: CMakeLists.txt  package.xml
include/object_rect_image_saver/: object_rect_image_saver.h
launch/: object_rect_image_saver.launch
scripts/: generate_dataset.py
src/: object_rect_image_saver.cpp  object_rect_image_saver_node.cpp
